# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL

  11 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  - removed support for --all and world in 'emerge --unmerge', by default now
    all matching packages are removed since with the new slots functionality
    old package versions should not exists anymore
  - colored package name red too when a blocking package is found during
    pretend operation
  - changed emerge invocation arguments to be in a new universal interface
    format this has been decided to be :
	'emerge --action --option --option [packageset]'
	some features however don't respect this, but that's since they are not
	package installation related and are easier to use as straight commands
	eg: emerge rsync
  - added UNMERGE_DELAY var to make.globals and support it in emerge to obtain
    the number of seconds to wait
  - support for NOCOLOR="yes" as wel as NOCOLOR="true"
  
  
  11 Feb 2002; G.Bevin <gbevin@gentoo.org> sandbox.c, libsandbox.c :
  added checks to see if the files where information is written to are really
  regular files and not symlinks

*portage 1.8.9_pre6 (10 Feb 2002)

  10 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  added support for 'emerge --unmerge world' which removes all old package
  versions from the system
  made 'emerge --unmerge' take binary compatibility slots into account, this
  prevents that packages with different versions but also different slots, are
  being unmerged
  added support for "--verbose" in "emerge rebuild" and "emerge world" to
  provide details about packages that aren't in the local tree anymore and to
  notify the user about which packages don't support slots

  9 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  added support for the rebuild mode which rebuilds all the packages on your
  system for which a corresponding package could be found in to portage tree

  9 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :